# Viking-Civilisation-Prediction-Astar-Island-NM-i-AI-2026

./: .env.example  .gitignore  LICENSE  README.md  STATUS.md  pyproject.toml  requirements.txt
data/observations/: run_20260321T095328Z.json  run_20260321T121705Z.json
docs/: Astar API Endpoints.md  Astar Island Plan de la NM i AI 2026 para el Ejercicio 3.docx  Astar Island Plan de la NM i AI 2026 para el Ejercicio 3.md  Astar Overview.md  Astar Quickstart.md  Astar Scoring.md  Astar Simulation Mechanics.md  Getting Starting.md
scripts/: backfill_completed_rounds.py  evaluate_loo.py  refit_regime_priors.py  run_round.py  train_meta_model.py
src/astar_island/: __init__.py  api_client.py  cli.py  config.py  constants.py  features.py  gt_priors.py  models.py  observation_store.py  predictor_baseline.py  predictor_parametric.py  predictor_round_model.py  query_planner.py  regime_estimator.py  run_log.py  runner.py  service.py  submission.py  terrain.py
src/astar_island.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_client.py  test_features.py  test_predictor.py  test_query_planner.py  test_run_log.py  test_submission.py
